<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alejandro.trabajoandroid1.AddEditActivity"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNombre"
            android:hint="@string/edtNombre"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtPrecio"
            android:hint="@string/edtPrecio"
            android:gravity="center_vertical|center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtStock"
            android:hint="@string/edtStock"
            android:gravity="center_vertical|center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listaTipos" />

        <Button
            android:text="@string/btnAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddEdit"
            android:background="@android:color/darker_gray" />

    </LinearLayout>
</ScrollView>
